Update Mobile Navigation
Updated mobile nav to fix overlap with hero text

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <title>Discover Big Sur</title>
     </head>
     <body>
-        <!-- Header -->
+        <!-- Navigation -->
         <header class="bg-img">
             <div class="clearfix">
                 <div class="navbar">
-                    <a href="#" class="logo">Big Sur</a>
+                    <a href="index.html" class="logo">Big Sur</a>
                     <div class="navbar_toggle">
                         <i class="fas fa-bars"></i>
                     </div>
