--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Links -->
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display:400,400i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="./slick/slick.css">
         <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css">
@@ -44,7 +45,7 @@
             </div>
             <div class="txt-block">
                 <div class="txt">
-                    <h3 class="white-txt h3">An Unforgettable Coastline</h3>
+                    <h3 class="white-txt h3 txt-height">An Unforgettable Coastline</h3>
                     <p class="white-txt">Welcome to Big Sur where rugged mountain scenery meets the California coast. Stretching for roughly 90 miles along the coastline, Big Sur is situated between Carmel and San Simeon. Stopping anywhere along the winding coastal highway reveals dramatic views of the ocean and sweeping cliffs. Big Sur is home not only to unforgettable stretches of beach, but also to redwood filled state parks. Known for its relaxed atmosphere, Big Sur attracts nature lovers and those looking for a luxurious getaway alike.</p>
                 </div>
                 
